Lid_driven_cavity_analytic/high/jitfailure-dolfin_expression_7706f3760bcc90adb3302a59fb9bced6/error.log
/tmp/tmpfqi1l40l/dolfin_expression_7706f3760bcc90adb3302a59fb9bced6.cpp: In member function ‘virtual void dolfin::dolfin_expression_7706f3760bcc90adb3302a59fb9bced6::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpfqi1l40l/dolfin_expression_7706f3760bcc90adb3302a59fb9bced6.cpp:62:37: error: invalid type argument of unary ‘*’ (have ‘int’)
           values[0] = (Re)*8*(x[0]**4-2*x[0]**3+x[0]**2);
                                     ^
/tmp/tmpfqi1l40l/dolfin_expression_7706f3760bcc90adb3302a59fb9bced6.cpp:62:47: error: invalid type argument of unary ‘*’ (have ‘int’)
           values[0] = (Re)*8*(x[0]**4-2*x[0]**3+x[0]**2);
                                               ^
/tmp/tmpfqi1l40l/dolfin_expression_7706f3760bcc90adb3302a59fb9bced6.cpp:62:55: error: invalid type argument of unary ‘*’ (have ‘int’)
           values[0] = (Re)*8*(x[0]**4-2*x[0]**3+x[0]**2);
                                                       ^
